[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga-2.html
+++ b/test-pms-software-gestion-malaga-2.html
@@ -141,35 +141,31 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>La gestión de alquileres vacacionales en Málaga puede ser una tarea compleja, especialmente si se carece de las herramientas adecuadas. Un Property Management System (PMS) es fundamental para simplificar esta labor, permitiendo a los propietarios y gestores optimizar la administración de sus propiedades. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional y eficiente.</p>
+<p>La gestión de alquileres vacacionales en Málaga se ha vuelto cada vez más compleja. Los propietarios deben manejar reservas, normativas y la satisfacción del cliente, todo al mismo tiempo. Aquí es donde entra en juego un PMS (Property Management System). Este sistema es una herramienta esencial que permite a los propietarios optimizar su negocio, mejorar la eficiencia y cumplir con la normativa local. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que gestiones tu alquiler vacacional de forma profesional.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS, o sistema de gestión de propiedades, es una plataforma que permite a los propietarios y administradores de alquileres vacacionales gestionar diversas operaciones desde un único lugar. Incluye funcionalidades clave como la gestión de reservas, la administración de habitaciones, el check-in digital, y la facturación. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para facilitar estas tareas, asegurando que los propietarios de alquileres en Málaga cuenten con una herramienta integral que se adapte a sus necesidades.</p>
+<p>Un PMS es un software que ayuda a los propietarios y administradores de propiedades a gestionar todos los aspectos de su negocio de alquiler. Esto incluye la gestión de reservas, el control de habitaciones, la facturación, y mucho más. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para facilitar la vida de los propietarios de alquileres vacacionales en Málaga. Con este sistema, podrás simplificar tus tareas diarias y asegurarte de que cada rincón de tu negocio esté bien atendido.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Nuestro PMS está diseñado para ofrecer una solución completa para la gestión de alquileres vacacionales. Algunas de las funcionalidades clave que incluirá son:</p>
+<p>Nuestro PMS está diseñado para ofrecer una experiencia integral a los propietarios de alquileres vacacionales. Algunas de las funcionalidades clave que incluirá son:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario:</strong> Visualiza y gestiona todas tus reservas en un solo lugar.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de entrada de huéspedes cumpliendo con las normativas locales.</li>
-<li><strong>Microsite de reservas directas sin comisiones:</strong> Aumenta tus ingresos al permitir a los huéspedes reservar directamente.</li>
-<li><strong>Facturación automática:</strong> Genera y envía facturas de forma automática a tus huéspedes.</li>
-<li><strong>Gestión de múltiples propiedades:</strong> Administra diferentes propiedades desde una única plataforma.</li>
-<li><strong>App móvil para gestión desde cualquier lugar:</strong> Lleva la gestión en tu bolsillo, de forma práctica y accesible.</li>
-<li><strong>Y mucho más...</strong> Adaptamos nuestro servicio a las necesidades específicas de cada cliente.</li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Controla tus reservas en tiempo real, evita sobreventas y organiza tu calendario de manera eficiente.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita el registro de tus huéspedes y asegura que cumples con la normativa local.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ingresos permitiendo a los huéspedes reservar directamente en tu sitio.</li>
+<li><strong>Facturación automática</strong>: Genera facturas de forma rápida y sin complicaciones.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Administra varias propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Mantente al tanto de tu negocio en todo momento, incluso cuando estés fuera.</li>
+<li><strong>Y mucho más...</strong>: Estamos constantemente innovando para ofrecerte las herramientas que realmente necesitas.</li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>En Málaga, el cumplimiento normativo es crucial para la operación de alquileres vacacionales. La normativa RD 933 exige que los propietarios cumplan con ciertos requisitos para evitar sanciones. Un PMS profesional no solo facilita el cumplimiento de estas normativas, sino que también ayuda a los propietarios a optimizar su tiempo y recursos. Por ejemplo, un propietario que utiliza un PMS puede asegurarse de que todos los registros de sus huéspedes estén actualizados y cumplan con las exigencias legales, evitando problemas futuros. Nuestro PMS en la nube resolverá estos problemas y te dará tranquilidad.</p>
+<p>El cumplimiento normativo es crucial en Málaga, especialmente con la reciente implementación del RD 933. Este reglamento establece obligaciones específicas para los propietarios de alquileres vacacionales, como la correcta gestión de la documentación de los huéspedes. Sin un PMS profesional, es fácil perder el control y enfrentar sanciones. Nuestro PMS en la nube está diseñado para resolver estos problemas, asegurando que tu negocio cumpla con todas las normativas y funcione de manera eficiente.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales. Te invitamos a unirte a esta lista para ser uno de los primeros en conocer todas las funcionalidades y ventajas que nuestro PMS ofrecerá.</p>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para que tu alquiler vacacional funcione como un reloj. Al unirte a nuestra lista de espera, no solo estarás a la vanguardia de la tecnología de gestión hotelera, sino que también tendrás acceso prioritario y beneficios especiales que no querrás perderte. ¡No dejes pasar esta oportunidad!</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>¿Qué es un PMS?</strong><br>Un PMS es un sistema que permite a los propietarios y gestores de alquileres vacacionales administrar y optimizar sus propiedades desde una única plataforma.</p>
-<p><strong>¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente para lanzar el PMS en el próximo semestre. Al apuntarte a la lista de espera, recibirás actualizaciones sobre la fecha de lanzamiento.</p>
-<p><strong>¿Qué incluirá el PMS?</strong><br>Incluirá funcionalidades como gestión de reservas, facturación automática, cumplimiento normativo, y más.</p>
-<p><strong>¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes apuntarte a la lista de espera a través de nuestro sitio web, donde recibirás información privilegiada sobre el lanzamiento y las características del PMS.</p>
+<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un sistema que ayuda a los propietarios a gestionar sus propiedades de alquiler de manera eficiente, abarcando desde reservas hasta facturación.</p>
+<p><strong>2. ¿Cuándo lanzaremos el PMS?</strong><br>Estamos trabajando arduamente para lanzarlo en el próximo trimestre. Apúntate a nuestra lista de espera para recibir actualizaciones.</p>
+<p><strong>3. ¿Qué incluirá el PMS?</strong><br>Incluirá herramientas para la gestión de reservas, cumplimiento normativo, facturación automática, y mucho más.</p>
+<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Simplemente visita nuestro sitio web y completa el formulario de inscripción. Te mantendremos informado sobre el lanzamiento y las novedades.</p>
 <h2>Datos locales útiles</h2>
-<ul>
-<li><strong>Ayuntamiento de Málaga:</strong> Proporciona información sobre las normativas locales para alquileres vacacionales y cómo cumplir con ellas.</li>
-<li><strong>Asociación de Hostelería de Málaga:</strong> Ofrece recursos y formación para propietarios de alquileres vacacionales y gestores de propiedades.</li>
-<li><strong>Turismo Costa del Sol:</strong> Una referencia clave para conocer el mercado de turismo en Málaga y las tendencias que afectan a los alquileres vacacionales.</li>
-</ul>
+<p>Para los propietarios de alquileres vacacionales en Málaga, es vital estar al tanto de la <strong>Delegación Territorial de Turismo</strong> de la Junta de Andalucía, que regula las normativas relacionadas con el alquiler vacacional. Además, el <strong>Ayuntamiento de Málaga</strong> ofrece recursos para ayudar a los propietarios a cumplir con las regulaciones locales. Por último, la <strong>Asociación de Alojamientos Turísticos de Málaga</strong> puede ser un gran aliado para obtener información y apoyo en la gestión de tus propiedades.</p>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
