--- a/test-pms-software-gestion-malaga.html
+++ b/test-pms-software-gestion-malaga.html
@@ -141,39 +141,76 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>Si eres propietario de un alquiler vacacional en Málaga, sabrás que la gestión eficiente de tu propiedad es crucial para maximizar tus ingresos y ofrecer una experiencia excepcional a tus huéspedes. Un Sistema de Gestión de Propiedades (PMS) es una herramienta esencial que facilita la administración de reservas, habitaciones y más. En este momento, <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional</strong>.</p>
+<p>En la vibrante ciudad de Málaga, donde el turismo y el alquiler vacacional están en pleno auge, contar con un sistema de gestión adecuado se vuelve esencial. El <strong>PMS</strong> (Property Management System) es una herramienta clave que permite a los propietarios y administradores de alquileres vacacionales optimizar su operación, gestionar reservas y cumplir con normativas locales. Además, <strong>estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias</strong> para que puedas llevar tu alquiler vacacional de forma profesional y eficiente.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS o Sistema de Gestión de Propiedades es un software diseñado para ayudar a los propietarios y administradores de inmuebles a gestionar sus operaciones diarias. Incluye funcionalidades como la gestión de reservas, check-in digital, facturación y mucho más. <strong>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong>, lo que te permitirá llevar un control exhaustivo de tu negocio de alquiler vacacional sin complicaciones.</p>
+<p>Un <strong>PMS</strong> es un software que centraliza y automatiza la gestión de propiedades, facilitando tareas como la administración de reservas, la gestión de habitaciones y el check-in digital. Gracias a un PMS, los propietarios pueden simplificar sus procesos, reducir errores y mejorar la experiencia del huésped. Nuestro PMS de gestión en la nube incluirá todo lo necesario para asegurar que tu operación de alquiler vacacional sea un éxito, desde la gestión de reservas hasta la facturación automática.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>La eficiencia de un PMS radica en sus funcionalidades. Nuestro sistema incluirá:</p>
+<p>El PMS que estamos desarrollando incluirá una serie de funcionalidades clave para satisfacer las necesidades de los propietarios de alquileres vacacionales en Málaga:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario</strong>: Sincronización automática de reservas en tiempo real.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita el proceso de registro y asegura que cumples con la normativa vigente.</li>
-<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ganancias al eliminar intermediarios.</li>
-<li><strong>Facturación automática</strong>: Generación de facturas de manera sencilla y rápida.</li>
-<li><strong>Gestión de múltiples propiedades</strong>: Ideal si tienes más de un alquiler vacacional.</li>
-<li><strong>App móvil para gestión desde cualquier lugar</strong>: Controla tu propiedad desde la palma de tu mano.</li>
+<li><strong>Gestión completa de reservas y calendario:</strong> Organiza y controla todas tus reservas en un solo lugar.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de llegada de tus huéspedes cumpliendo con la normativa vigente.</li>
+<li><strong>Microsite de reservas directas sin comisiones:</strong> Aumenta tus ingresos al permitir reservas directas sin intermediarios.</li>
+<li><strong>Facturación automática:</strong> Simplifica la facturación y el seguimiento de pagos.</li>
+<li><strong>Gestión de múltiples propiedades:</strong> Controla varias propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar:</strong> Administra tu negocio desde cualquier dispositivo, en cualquier momento.</li>
 <li><strong>Y mucho más...</strong></li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>La gestión de propiedades vacacionales en Málaga no es solo una cuestión de disponibilidad; también implica cumplir con normativas locales como el RD 933, que establece requisitos específicos para el registro de huéspedes. Por ejemplo, muchos propietarios han enfrentado sanciones por no cumplir con estos requerimientos. Un PMS profesional te ayudará a evitar problemas legales y a optimizar el proceso de gestión, asegurando que tu negocio funcione sin contratiempos. <strong>Nuestro PMS en la nube será tu aliado perfecto para resolver estos problemas.</strong></p>
+<p>La regulación del alquiler vacacional en Málaga, especialmente el cumplimiento del <strong>RD 933</strong>, ha elevado la necesidad de contar con un sistema de gestión que no solo optimice la operación, sino que también garantice el cumplimiento de la normativa. Muchos propietarios han enfrentado sanciones por no cumplir con estos requisitos, lo que subraya la importancia de un PMS completo. Con nuestro PMS en la nube, resolveremos estos problemas, asegurando que tu negocio esté siempre al día con las regulaciones locales.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Estamos emocionados de anunciar que <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para que puedas llevar tu alquiler vacacional al siguiente nivel. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y recibirán beneficios especiales. No pierdas la oportunidad de ser uno de los primeros en disfrutar de esta herramienta innovadora.</p>
+<p>Es un hecho: <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para facilitar la administración de tu alquiler vacacional. Si te unes a nuestra lista de espera, tendrás acceso prioritario a la plataforma y disfrutarás de beneficios especiales que no querrás perderte. Mantente un paso adelante en la gestión de tu propiedad y asegura el éxito de tu negocio.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<h3>¿Qué es un PMS?</h3>
-<p>Un PMS es un software que ayuda a gestionar las operaciones diarias de las propiedades vacacionales, como reservas, facturación y cumplimiento normativo.</p>
-<h3>¿Cuándo se lanzará el PMS?</h3>
-<p>Estamos trabajando arduamente para lanzar nuestra plataforma en los próximos meses. Asegúrate de unirte a nuestra lista de espera para recibir actualizaciones.</p>
-<h3>¿Qué incluirá el PMS?</h3>
-<p>Incluirá gestión de reservas, facturación automática, check-in digital, entre otras funcionalidades diseñadas para facilitar la gestión de tu alquiler vacacional.</p>
-<h3>¿Cómo puedo apuntarme a la lista de espera?</h3>
-<p>Simplemente visita nuestro sitio web y completa el formulario para ser uno de los primeros en acceder a nuestro PMS.</p>
+<p><strong>¿Qué es un PMS?</strong><br>Un PMS es un sistema que ayuda a los propietarios a gestionar sus propiedades de alquiler, facilitando la administración de reservas, facturación y más.</p>
+<p><strong>¿Cuándo lanzarán el PMS?</strong><br>Estamos en las etapas finales de desarrollo y anticipamos un lanzamiento en los próximos meses. Apuntarte a la lista de espera te mantendrá informado.</p>
+<p><strong>¿Qué incluirá el PMS?</strong><br>Incluirá todas las funcionalidades necesarias para gestionar tu alquiler vacacional de manera profesional, desde reservas hasta cumplimiento normativo.</p>
+<p><strong>¿Cómo puedo apuntarme a la lista de espera?</strong><br>Simplemente visita nuestra página y completa el formulario para asegurarte un lugar en la lista de espera.</p>
 <h2>Datos locales útiles</h2>
 <ul>
-<li><strong>Ley de Arrendamientos Urbanos en Andalucía</strong>: Es fundamental que los propietarios de alquileres vacacionales conozcan la normativa local para evitar problemas legales.</li>
-<li><strong>Agencia de Turismo de Málaga</strong>: Ofrece recursos y guías sobre cómo gestionar propiedades en la región.</li>
-<li><strong>Asociación de Propietarios de Alquileres Vacacionales de Málaga</strong>: Un recurso valioso para conectarte con otros propietarios y compartir experiencias.</li>
+<li><strong>Turismo Costa del Sol:</strong> Este organismo es responsable de promocionar el turismo en la región y proporciona recursos útiles para propietarios de alquileres vacacionales.</li>
+<li><strong>Ayuntamiento de Málaga:</strong> Ofrece información sobre las regulaciones y normativas que afectan a los alquileres vacacionales en la ciudad.</li>
+<li><strong>Asociación de Alquileres Vacacionales de Málaga:</strong> Un recurso importante que aboga por los derechos de los propietarios y proporciona actualizaciones sobre la normativa local.</li>
 </ul>
+<pre><code class="language-json">{
+  &quot;@context&quot;: &quot;https://schema.org&quot;,
+  &quot;@type&quot;: &quot;Organization&quot;,
+  &quot;name&quot;: &quot;Gestión de Alquileres Málaga&quot;,
+  &quot;url&quot;: &quot;https://www.tusitio.com&quot;,
+  &quot;logo&quot;: &quot;https://www.tusitio.com/logo.png&quot;,
+  &quot;sameAs&quot;: &quot;https://www.facebook.com/tusitio&quot;,
+  &quot;contactPoint&quot;: {
+    &quot;@type&quot;: &quot;ContactPoint&quot;,
+    &quot;contactType&quot;: &quot;Soporte&quot;,
+    &quot;telephone&quot;: &quot;+34-123-456-789&quot;,
+    &quot;areaServed&quot;: &quot;ES&quot;,
+    &quot;availableLanguage&quot;: &quot;Spanish&quot;
+  }
+},
+{
+  &quot;@context&quot;: &quot;https://schema.org&quot;,
+  &quot;@type&quot;: &quot;SoftwareApplication&quot;,
+  &quot;name&quot;: &quot;PMS de Gestión en la Nube&quot;,
+  &quot;operatingSystem&quot;: &quot;Web&quot;,
+  &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
+  &quot;description&quot;: &quot;El PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional.&quot;,
+  &quot;offers&quot;: {
+    &quot;@type&quot;: &quot;Offer&quot;,
+    &quot;url&quot;: &quot;https://www.tusitio.com/pms-software-gestion-Málaga&quot;,
+    &quot;priceCurrency&quot;: &quot;EUR&quot;,
+    &quot;price&quot;: &quot;0&quot;,
+    &quot;itemOffered&quot;: {
+      &quot;@type&quot;: &quot;Product&quot;,
+      &quot;name&quot;: &quot;PMS de Gestión en la Nube&quot;
+    }
+  }
+},
+{
+  &quot;@context&quot;: &quot;https://schema.org&quot;,
+  &quot;@type&quot;: &quot;WebPage&quot;,
+  &quot;name&quot;: &quot;PMS y Software de Gestión Hotelera en Málaga&quot;,
+  &quot;url&quot;: &quot;https://www.tusitio.com/pms-software-gestion-Málaga&quot;,
+  &quot;description&quot;: &quot;Información sobre el PMS de gestión en la nube diseñado para propietarios de alquileres vacacionales en Málaga.&quot;
+}
+</code></pre>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
