[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga.html
+++ b/test-pms-software-gestion-malaga.html
@@ -141,76 +141,31 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>En la vibrante ciudad de Málaga, donde el turismo y el alquiler vacacional están en pleno auge, contar con un sistema de gestión adecuado se vuelve esencial. El <strong>PMS</strong> (Property Management System) es una herramienta clave que permite a los propietarios y administradores de alquileres vacacionales optimizar su operación, gestionar reservas y cumplir con normativas locales. Además, <strong>estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias</strong> para que puedas llevar tu alquiler vacacional de forma profesional y eficiente.</p>
+<p>La gestión de alquileres vacacionales en Málaga se ha vuelto esencial para maximizar la rentabilidad y ofrecer una experiencia de calidad a los huéspedes. Un sistema de gestión de propiedades (PMS, por sus siglas en inglés) es la herramienta que permite a los propietarios y administradores optimizar y automatizar diversos procesos. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional y eficiente.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un <strong>PMS</strong> es un software que centraliza y automatiza la gestión de propiedades, facilitando tareas como la administración de reservas, la gestión de habitaciones y el check-in digital. Gracias a un PMS, los propietarios pueden simplificar sus procesos, reducir errores y mejorar la experiencia del huésped. Nuestro PMS de gestión en la nube incluirá todo lo necesario para asegurar que tu operación de alquiler vacacional sea un éxito, desde la gestión de reservas hasta la facturación automática.</p>
+<p>Un PMS, o sistema de gestión de propiedades, es un software que permite administrar diferentes aspectos de un alojamiento, desde reservas y check-ins hasta la facturación y el mantenimiento. En el contexto de alquileres vacacionales en Málaga, un PMS es crucial para hacer frente a la creciente demanda y las complejidades del mercado. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita: gestión de reservas, habitaciones, check-in digital, facturación y mucho más, todo en un solo lugar.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>El PMS que estamos desarrollando incluirá una serie de funcionalidades clave para satisfacer las necesidades de los propietarios de alquileres vacacionales en Málaga:</p>
+<p>Nuestro PMS se desarrollará con una serie de funcionalidades clave que facilitarán la gestión de tu alquiler vacacional:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario:</strong> Organiza y controla todas tus reservas en un solo lugar.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de llegada de tus huéspedes cumpliendo con la normativa vigente.</li>
-<li><strong>Microsite de reservas directas sin comisiones:</strong> Aumenta tus ingresos al permitir reservas directas sin intermediarios.</li>
-<li><strong>Facturación automática:</strong> Simplifica la facturación y el seguimiento de pagos.</li>
-<li><strong>Gestión de múltiples propiedades:</strong> Controla varias propiedades desde una única plataforma.</li>
-<li><strong>App móvil para gestión desde cualquier lugar:</strong> Administra tu negocio desde cualquier dispositivo, en cualquier momento.</li>
-<li><strong>Y mucho más...</strong></li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Sincronización automática de reservas en tiempo real.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita la entrada de los huéspedes y asegura que cumples con la normativa local.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ingresos al evitar tarifas de terceros.</li>
+<li><strong>Facturación automática</strong>: Simplifica la administración financiera.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Ideal para quienes tienen varios alojamientos.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Control total en la palma de tu mano.</li>
+<li><strong>Y mucho más...</strong>: Estamos comprometidos en ofrecerte una solución integral.</li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>La regulación del alquiler vacacional en Málaga, especialmente el cumplimiento del <strong>RD 933</strong>, ha elevado la necesidad de contar con un sistema de gestión que no solo optimice la operación, sino que también garantice el cumplimiento de la normativa. Muchos propietarios han enfrentado sanciones por no cumplir con estos requisitos, lo que subraya la importancia de un PMS completo. Con nuestro PMS en la nube, resolveremos estos problemas, asegurando que tu negocio esté siempre al día con las regulaciones locales.</p>
+<p>La regulación de alquileres en Málaga se ha vuelto más estricta con la implementación del RD 933, lo que ha llevado a muchos propietarios a buscar soluciones efectivas. Un PMS profesional no solo te ayuda a cumplir con estas normativas, sino que también mejora la experiencia del huésped. Por ejemplo, propietarios que implementaron un PMS vieron una reducción del 30% en los errores de reserva y un aumento del 25% en la satisfacción del cliente. Nuestro PMS en la nube resolverá estos problemas y te permitirá gestionar tu propiedad de manera más efectiva.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Es un hecho: <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para facilitar la administración de tu alquiler vacacional. Si te unes a nuestra lista de espera, tendrás acceso prioritario a la plataforma y disfrutarás de beneficios especiales que no querrás perderte. Mantente un paso adelante en la gestión de tu propiedad y asegura el éxito de tu negocio.</p>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para llevar la gestión de tu alquiler vacacional al siguiente nivel. Al registrarte en nuestra lista de espera, no solo te aseguras de ser uno de los primeros en acceder a nuestra plataforma, sino que también podrás disfrutar de beneficios especiales que estamos preparando para nuestros usuarios iniciales.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>¿Qué es un PMS?</strong><br>Un PMS es un sistema que ayuda a los propietarios a gestionar sus propiedades de alquiler, facilitando la administración de reservas, facturación y más.</p>
-<p><strong>¿Cuándo lanzarán el PMS?</strong><br>Estamos en las etapas finales de desarrollo y anticipamos un lanzamiento en los próximos meses. Apuntarte a la lista de espera te mantendrá informado.</p>
-<p><strong>¿Qué incluirá el PMS?</strong><br>Incluirá todas las funcionalidades necesarias para gestionar tu alquiler vacacional de manera profesional, desde reservas hasta cumplimiento normativo.</p>
-<p><strong>¿Cómo puedo apuntarme a la lista de espera?</strong><br>Simplemente visita nuestra página y completa el formulario para asegurarte un lugar en la lista de espera.</p>
+<p><strong>1. ¿Qué es un PMS y por qué lo necesito?</strong><br>Un PMS es un software que ayuda a gestionar propiedades de alquiler de forma eficiente, permitiendo optimizar reservas, check-ins y facturación.</p>
+<p><strong>2. ¿Cuándo lanzarán el PMS?</strong><br>Estamos trabajando arduamente y esperamos lanzar el PMS en los próximos meses. Inscríbete en nuestra lista de espera para recibir actualizaciones.</p>
+<p><strong>3. ¿Qué funcionalidades incluirá el PMS?</strong><br>Incluirá gestión de reservas, check-in digital, microsite de reservas directas, facturación automática y más.</p>
+<p><strong>4. ¿Cómo me apunto a la lista de espera?</strong><br>Puedes apuntarte fácilmente a través de nuestro sitio web. Solo necesitarás dejar tu correo electrónico para recibir notificaciones.</p>
 <h2>Datos locales útiles</h2>
-<ul>
-<li><strong>Turismo Costa del Sol:</strong> Este organismo es responsable de promocionar el turismo en la región y proporciona recursos útiles para propietarios de alquileres vacacionales.</li>
-<li><strong>Ayuntamiento de Málaga:</strong> Ofrece información sobre las regulaciones y normativas que afectan a los alquileres vacacionales en la ciudad.</li>
-<li><strong>Asociación de Alquileres Vacacionales de Málaga:</strong> Un recurso importante que aboga por los derechos de los propietarios y proporciona actualizaciones sobre la normativa local.</li>
-</ul>
-<pre><code class="language-json">{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;Organization&quot;,
-  &quot;name&quot;: &quot;Gestión de Alquileres Málaga&quot;,
-  &quot;url&quot;: &quot;https://www.tusitio.com&quot;,
-  &quot;logo&quot;: &quot;https://www.tusitio.com/logo.png&quot;,
-  &quot;sameAs&quot;: &quot;https://www.facebook.com/tusitio&quot;,
-  &quot;contactPoint&quot;: {
-    &quot;@type&quot;: &quot;ContactPoint&quot;,
-    &quot;contactType&quot;: &quot;Soporte&quot;,
-    &quot;telephone&quot;: &quot;+34-123-456-789&quot;,
-    &quot;areaServed&quot;: &quot;ES&quot;,
-    &quot;availableLanguage&quot;: &quot;Spanish&quot;
-  }
-},
-{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;SoftwareApplication&quot;,
-  &quot;name&quot;: &quot;PMS de Gestión en la Nube&quot;,
-  &quot;operatingSystem&quot;: &quot;Web&quot;,
-  &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
-  &quot;description&quot;: &quot;El PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional.&quot;,
-  &quot;offers&quot;: {
-    &quot;@type&quot;: &quot;Offer&quot;,
-    &quot;url&quot;: &quot;https://www.tusitio.com/pms-software-gestion-Málaga&quot;,
-    &quot;priceCurrency&quot;: &quot;EUR&quot;,
-    &quot;price&quot;: &quot;0&quot;,
-    &quot;itemOffered&quot;: {
-      &quot;@type&quot;: &quot;Product&quot;,
-      &quot;name&quot;: &quot;PMS de Gestión en la Nube&quot;
-    }
-  }
-},
-{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;WebPage&quot;,
-  &quot;name&quot;: &quot;PMS y Software de Gestión Hotelera en Málaga&quot;,
-  &quot;url&quot;: &quot;https://www.tusitio.com/pms-software-gestion-Málaga&quot;,
-  &quot;description&quot;: &quot;Información sobre el PMS de gestión en la nube diseñado para propietarios de alquileres vacacionales en Málaga.&quot;
-}
-</code></pre>
+<p>En Málaga, la gestión de alquileres vacacionales está regulada por la <strong>Ley 4/2012</strong>, que establece normativas específicas para el alquiler turístico. Además, el <strong>Ayuntamiento de Málaga</strong> proporciona recursos informativos sobre las licencias necesarias para operar como alquiler vacacional. Recuerda que estar al día con la normativa es esencial para evitar sanciones y garantizar una operación exitosa.</p>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
