Actualizar URL del video de YouTube tutorial
- Cambiar video de pHm49uVLYVc a Ttr6aefFLbg
- Actualizar embed y enlace en landing page

--- a/index.html
+++ b/index.html
@@ -2046,7 +2046,7 @@
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: 0 20px 60px rgba(0,0,0,0.3); background: #000;">
           <iframe
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
-            src="https://www.youtube.com/embed/pHm49uVLYVc"
+            src="https://www.youtube.com/embed/Ttr6aefFLbg"
             title="Video Tutorial - Panel de Usuario Delfín Check-in"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowFullScreen
@@ -2054,7 +2054,7 @@
         </div>
         <div style="text-center; margin-top: 24px;">
           <a
-            href="https://www.youtube.com/watch?v=pHm49uVLYVc"
+            href="https://www.youtube.com/watch?v=Ttr6aefFLbg"
             target="_blank"
             rel="noopener noreferrer"
             style="color: #2563eb; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; font-size: 16px;"
