[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga.html
+++ b/test-pms-software-gestion-malaga.html
@@ -65,7 +65,7 @@
     body{
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
-      background: #ffffff;
+      background: #f0f4f8;
     }
     a{ color: var(--brand); text-decoration: none }
     a:hover{ text-decoration: underline; }
@@ -141,35 +141,35 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>En el competitivo mundo de los alquileres vacacionales, contar con un sistema de gestión efectivo es esencial. Un Property Management System (PMS) permite a los propietarios y administradores optimizar la gestión de reservas, facilitar la comunicación con los huéspedes y asegurar el cumplimiento de normativas locales. En Málaga, donde el turismo es una de las principales fuentes de ingresos, tener un PMS profesional es más que una ventaja; es una necesidad. <strong>Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para gestionar tu alquiler vacacional de forma profesional.</strong></p>
+<p>La gestión de alquileres vacacionales en Málaga, una de las ciudades más visitadas de Andalucía, puede ser un proceso complicado. Un PMS (Property Management System) es una herramienta esencial que te ayuda a gestionar todas las operaciones de tu propiedad de manera eficiente. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para garantizar que puedas gestionar tu alquiler vacacional de forma profesional. </p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS es una herramienta integral que ayuda a administrar diferentes aspectos de un alojamiento, desde la gestión de reservas hasta la facturación y el mantenimiento. Con un PMS, los propietarios pueden centralizar todas las operaciones en un solo lugar, lo que mejora la eficiencia y reduce el riesgo de errores. <strong>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita: gestión de reservas, habitaciones, check-in digital, facturación, y más.</strong></p>
+<p>Un PMS es un software diseñado para simplificar la gestión de propiedades, especialmente en el sector hotelero y de alquiler vacacional. Permite a los propietarios manejar reservas, gestionar habitaciones, realizar check-ins digitales y facturar de manera eficiente. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para proporcionar una experiencia integral en la administración de alquileres vacacionales en Málaga.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Nuestro PMS será una solución completa para la gestión de alquileres vacacionales, incluyendo características clave como:</p>
+<p>Nuestro PMS ofrecerá una variedad de funcionalidades clave que facilitarán la gestión de tus propiedades. Entre ellas se encuentran:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario:</strong> Control total sobre las fechas disponibles y las reservas realizadas.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de entrada de los huéspedes y asegura que cumples con la normativa local.</li>
-<li><strong>Microsite de reservas directas sin comisiones:</strong> Permite a los huéspedes reservar directamente a través de tu propia página.</li>
-<li><strong>Facturación automática:</strong> Generación de facturas sin complicaciones para una gestión más eficiente.</li>
-<li><strong>Gestión de múltiples propiedades:</strong> Ideal para quienes manejan más de un alquiler vacacional.</li>
-<li><strong>App móvil para gestión desde cualquier lugar:</strong> Controla tu negocio en cualquier momento y lugar.</li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Organiza tus reservas de manera sencilla y visualiza la disponibilidad en tiempo real.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Agiliza el proceso de llegada de tus huéspedes y asegúrate de cumplir con la normativa local.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Permite a tus huéspedes reservar directamente en tu sitio, evitando comisiones de terceros.</li>
+<li><strong>Facturación automática</strong>: Genera facturas de manera automática, lo que simplifica la gestión contable.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Si tienes varias propiedades, nuestro sistema te permitirá gestionarlas todas desde un solo lugar.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Mantente al tanto de tu negocio en todo momento, incluso desde tu smartphone.</li>
 <li><strong>Y mucho más...</strong></li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>Málaga ha implementado el RD 933, que regula las condiciones de los alojamientos turísticos. Sin un PMS adecuado, los propietarios pueden enfrentar complicaciones legales y operativas. Por ejemplo, un propietario sin un sistema eficaz podría tener dificultades para gestionar las reservas o cumplir con la normativa, lo que podría resultar en sanciones. Con nuestro PMS en la nube, podrás gestionar todos estos aspectos de manera sencilla y cumplir con todos los requisitos legales.</p>
+<p>En Málaga, la normativa de alquiler vacacional es estricta. El cumplimiento del RD 933 es crucial para evitar sanciones. Muchos propietarios enfrentan problemas relacionados con la gestión de reservas y la falta de transparencia en sus operaciones. Con nuestro PMS en la nube, abordarás estos desafíos de manera efectiva. Te proporcionaremos herramientas que no solo te ayudarán a cumplir con la ley, sino que también mejorarán la experiencia de tus huéspedes.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Nos complace anunciar que <strong>estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para que tu alquiler vacacional opere sin inconvenientes. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales. No te pierdas esta oportunidad de optimizar tu negocio.</p>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Este sistema no solo te ayudará a optimizar tus operaciones diarias, sino que también te proporcionará acceso a nuevas funcionalidades y actualizaciones constantes. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales, lo que te permitirá estar a la vanguardia en la gestión de tu alquiler vacacional.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un sistema que ayuda a gestionar todas las operaciones de un alojamiento, incluyendo reservas, facturación y mantenimiento.</p>
-<p><strong>2. ¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente para lanzar el PMS en los próximos meses. Apúntate a nuestra lista de espera para recibir actualizaciones.</p>
-<p><strong>3. ¿Qué incluirá el PMS?</strong><br>Incluirá gestión de reservas, check-in digital, facturación automática y muchas otras funcionalidades pensadas para alquileres vacacionales.</p>
-<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Simplemente visita nuestro sitio web y regístrate para ser uno de los primeros en acceder a nuestro PMS.</p>
+<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un software que facilita la gestión de propiedades de alquiler, integrando funciones como reservas, facturación y cumplimiento normativo.</p>
+<p><strong>2. ¿Cuándo lanzaremos el PMS?</strong><br>Estamos trabajando arduamente y esperamos lanzar nuestro PMS en los próximos meses. Al registrarte en nuestra lista de espera, recibirás actualizaciones sobre el progreso.</p>
+<p><strong>3. ¿Qué incluirá el PMS?</strong><br>Incluirá herramientas para gestión de reservas, check-in digital, facturación automática, gestión de múltiples propiedades y mucho más.</p>
+<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes registrarte fácilmente en nuestra página web. Estarás entre los primeros en recibir información sobre el lanzamiento y beneficios exclusivos.</p>
 <h2>Datos locales útiles</h2>
-<p>Para aquellos interesados en el alquiler vacacional en Málaga, es importante estar al tanto de las regulaciones locales. Aquí hay algunos recursos útiles:</p>
+<p>Málaga, con su rica historia y atractivo turístico, cuenta con diversas normativas que regulan el alquiler vacacional. Aquí te dejamos algunos recursos útiles:</p>
 <ul>
-<li><strong>Consejería de Turismo de Andalucía:</strong> Proporciona información sobre normativas y buenas prácticas para alojamientos turísticos.</li>
-<li><strong>Ayuntamiento de Málaga:</strong> Ofrece guías y recursos para cumplir con las regulaciones locales en materia de alquiler vacacional.</li>
-<li><strong>Asociaciones de propietarios de alquileres turísticos:</strong> Grupos que pueden ofrecer apoyo y compartir experiencias sobre la gestión de propiedades en Málaga.</li>
+<li><strong>Consejería de Turismo de Andalucía</strong>: Proporciona información sobre normativas y requisitos para el alquiler vacacional en la región.</li>
+<li><strong>Asociación de Alquiler Vacacional de Málaga</strong>: Ofrece apoyo y recursos a propietarios para cumplir con las regulaciones locales y mejorar la gestión de sus propiedades.</li>
+<li><strong>Ayuntamiento de Málaga</strong>: Consulta sobre licencias y regulaciones específicas para alquileres vacacionales en la ciudad.</li>
 </ul>
 
     
